# msdf_text_rendering

./: .gitignore  CMakeLists.txt  Dependencies.cmake  renderdoc_settings.cap
app/: CMakeLists.txt
app/include/: font.hpp
app/src/: font.cpp  main.cpp
